Fix layout issues in optimization priorities, #112

--- a/src/components/Content/Optimizer.css
+++ b/src/components/Content/Optimizer.css
@@ -49,3 +49,38 @@
 .loadSave label {
     margin-left: 3px
 }
+
+.factor-form-row {
+    display: flex;
+    align-items: center;
+    gap: 1px;
+    flex-wrap: wrap;
+}
+
+.factor-form-select,
+.factor-form-crement {
+    flex: 1 1 100%;
+}
+
+@media (min-width: 600px) {
+    .factor-form-select,
+    .factor-form-crement {
+        flex: 1;
+    }
+}
+
+.crement-container {
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+}
+
+.crement-button {
+    height: 25px;
+    width: 25px;
+    min-width: 25px;
+}
+
+.crement-value {
+    margin-left: 2px;
+}
